<resources>
    <string name="app_name">Thunderbird</string>
    <string name="login_to_your_account">Log in to your account.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_button">Login Button</string>
    <string name="loginText">Login</string>
    <string name="not_have_account_signup">Don\'t have Account? Sign Up!</string>
    <string name="title_activity_display">DisplayActivity</string>
    <string name="forgot_change_password">Forgot/Change Password</string>
    <string name="good_morning">Good Morning</string>
    <string name="good_afternoon">Good Afternoon</string>
    <string name="good_evening">Good Evening</string>
    <string name="hello">Hello</string>
    <string name="email_name">Logged in as</string>
    <string name="container">Container</string>
    <string name="cargo">Cargo</string>
    <string name="add_cargo">Add Cargo</string>
    <string name="undo_cargo">Undo Cargo</string>
    <string name="continue_to_display">Continue</string>
    <string name="pack_container">Pack Container</string>
    <string name="log_out">Log Out</string>
    <string name="change_password">Change Password</string>
    <string name="create_new_cargo">Create New Cargo</string>
    <string name="create_new_container">Create New Container</string>
    <string name="create_cargo">Create Cargo</string>
    <string name="create_container">Create Container</string>
    <string name="cargo_name">Cargo Name</string>
    <string name="container_name">Container Name</string>
    <string name="name">Name</string>
    <string name="length">Length</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="weightLimit">Weight Limit</string>
</resources>