<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cargoLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp"
    tools:context=".SelectionActivity">

    <TextView
        android:id="@+id/containerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/container"
        app:layout_constraintBottom_toTopOf="@+id/containerSpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.812" />

    <Spinner
        android:id="@+id/containerSpinner"
        android:layout_height="93dp"
        android:layout_marginTop="32dp"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.095"
        android:layout_width="fill_parent"/>

    <TextView
        android:id="@+id/cargoText"
        android:layout_width="54dp"
        android:layout_height="18dp"
        android:text="@string/cargo"
        app:layout_constraintBottom_toTopOf="@+id/cargoSpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/containerSpinner" />

    <Spinner
        android:id="@+id/cargoSpinner"
        android:layout_width="259dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.329" />

    <NumberPicker
        android:id="@+id/numberPicker"
        android:layout_width="58dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/cargoSpinner"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.328" />

    <Button
        android:id="@+id/confirmCargo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cargoSpinner"
        android:layout_marginTop="28dp"
        android:text="@string/add_cargo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cargoSpinner" />

    <Button
        android:id="@+id/undoCargo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cargoSpinner"
        android:layout_marginTop="24dp"
        android:text="@string/undo_cargo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmCargo" />

    <Button
        android:id="@+id/continueToNextScreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cargoSpinner"
        android:layout_marginBottom="32dp"
        android:text="@string/continue_to_display"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/undoCargo" />

</androidx.constraintlayout.widget.ConstraintLayout>